# chat4all

./: .env  .gitignore  Makefile  README.md  pyproject.toml  pytest.ini
common/: Dockerfile.template
common/auth/: security.py
common/clients/: metadata_client.py
common/database/: redis_client.py  s3_client.py  scylla_client.py
common/observability/: metrics.py
common/proto/: auth.proto  events.proto  metadata.proto
common/schemas/: events.py
common/utils/: kafka_client.py  proto_converter.py
infra/local/: docker-compose.yml
infra/local/gateway/: nginx.conf
infra/local/monitoring/: datasources.yml  loki-config.yaml  prometheus.yml  promtail-config.yaml
services/api-service/src/: dependencies.py  main.py  schemas.py
services/api-service/src/routers/: conversations.py  files.py  messages.py  sync.py  users.py
services/auth-service/src/: database.py  main.py  models.py  schemas.py
services/connector-mock/src/: main.py
services/delivery-worker/src/: main.py
services/fanout-service/src/: main.py
services/ingestion-service/src/: main.py
services/metadata-service/database/: Dockerfile  init_db.sql
services/metadata-service/src/: consumer.py  database.py  main.py  repository.py
services/notification-service/src/: main.py
services/socket-gateway/src/: main.py
services/status-service/src/: main.py
tests/: Dockerfile.test  requirements.txt  test_full_system.py  test_routing.py
